codegen/ui_tests/rhai_mod_path_attr.stderr
error: expecting attribute name
  --> ui_tests/rhai_mod_path_attr.rs:11:12
   |
11 | #[rhai_mod(rhai::name = "thing")]
   |            ^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_mod_path_attr.rs:24:8
   |
24 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
